--- a/public/index.html
+++ b/public/index.html
@@ -39,7 +39,7 @@
     }
   </style>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Please enable javascript to see my website.</noscript>
     <div id="root"></div>
   </body>
 </html>
