added in random phrase for explore function

--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,10 @@
       href="https://fonts.googleapis.com/css?family=Raleway&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Chelsea+Market&display=swap"
+      rel="stylesheet"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -39,7 +43,10 @@
     }
   </style>
   <body>
-    <noscript>Please enable javascript to see my website.</noscript>
+    <noscript
+      >Please enable javascript to see my website. Its pretty much all in
+      JavaScript since this is a ReactJS site so...</noscript
+    >
     <div id="root"></div>
   </body>
 </html>
