--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Jon Cooper</title>
+    <title>Jonathan Cooper</title>
   </head>
   <style>
     body,
@@ -45,7 +45,7 @@
   <body>
     <noscript
       >Please enable javascript to see my website. Its pretty much all in
-      JavaScript since this is a ReactJS site so...</noscript
+      JavaScript so 🙃...</noscript
     >
     <div id="root"></div>
   </body>
